# cmake-template

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/hello_world/: main.cpp
include/hello/hello/: hello.h
src/: CMakeLists.txt
src/hello/: hello.cpp
